@@ -14,6 +14,7 @@ source/destination IP address because RTP can be different.
 - try to solve problem with "voipmonitor: no more space for next media stream
 (IP:port), raise MAX_IP_PER_CALL"
 - a_* columns in database should always belongs to caller
+- fix cdr.caller/cdr.called which were swapped in cases of sip re-invites.  
 
 UPGRADE: cat cdrtable.sql.1.3-1.5 | mysql voipmonitor
 
